src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>GWBase__Prospect_Level__c</fullName>
        <description>Level of Prospect. Calculated based on Total Gifts fields unless Overridden in Override Prospect field.  Change formula to embody client&apos;s donation level rules.</description>
        <formula>IF(OR(ISBLANK(TEXT(GWBase__Override_Prospect_Level__c)) ,  ISPICKVAL(GWBase__Override_Prospect_Level__c, &apos;Do Not Override&apos;)), 

        IF( OR(ISNULL( GWBase__TotalOppAmount__c ),GWBase__TotalOppAmount__c =0),&apos;&apos;, 
            IF(  GWBase__OppAmountLastYear__c  &gt;= 250 ||  GWBase__OppAmountThisYear__c  &gt;= 250 ,&apos;Major Donor&apos;, 
            IF(GWBase__OppAmountLastYear__c  = 0 &amp;&amp; GWBase__OppAmountThisYear__c  = 0, &apos;Lapsed Donor&apos;, &apos;Donor&apos;))), 

 TEXT(GWBase__Override_Prospect_Level__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Level of Prospect. Calculated based on Total Gifts fields unless Overridden in Override Prospect Level field.</inlineHelpText>
        <label>Prospect Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__SecondContactEmail__c</fullName>
        <label>Second Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GWBase__SecondContactFirstName__c</fullName>
        <label>Second Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__SecondContactLastName__c</fullName>
        <label>Second Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GWBase__SecondContactSalutation__c</fullName>
        <label>Second Contact Salutation</label>
        <picklist>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GWBase__Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GWBase__SmallestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Smallest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__Staff_Status__c</fullName>
        <inlineHelpText>Is this contact a staff member?</inlineHelpText>
        <label>Staff Status</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospective</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GWBase__TotalMembershipOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__TotalOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Gifts</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__Total_Household_Gifts__c</fullName>
        <formula>GWBase__ONEN_Household__r.GWBase__TotalOppAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Household Gifts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GWBase__Work_County__c</fullName>
        <label>Work County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geocoding_Status__c</fullName>
        <label>Geocoding Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_Payer_ID__c</fullName>
        <label>Online Payer ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Senate__c</fullName>
        <inlineHelpText>State Senate legislative district (where different from state House district)</inlineHelpText>
        <label>Voter State Senate</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voter_Leg_District__c</fullName>
        <inlineHelpText>State legislative district (House)</inlineHelpText>
        <label>Voter Leg District</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>GWBase__Donors</fullName>
        <columns>FULL_NAME</columns>
        <columns>GWBase__OppAmountLastNDays__c</columns>
        <columns>GWBase__OppAmountThisYear__c</columns>
        <columns>GWBase__OppAmountLastYear__c</columns>
        <columns>GWBase__NumberOfClosedOpps__c</columns>
        <columns>GWBase__LastCloseDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GWBase__TotalOppAmount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Donors</label>
    </listViews>
    <listViews>
        <fullName>GWBase__Engagement_Level</fullName>
        <columns>FULL_NAME</columns>
        <columns>GWBase__Engagement_Level__c</columns>
        <columns>GWBase__Engagement_Peak__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Engagement Level</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>